# sat_mcm

./: CMakeLists.txt  LICENSE  README.md  main.cpp
benchmark/inputs/cmm/: complex_8.csv  fft_rot_garrido_malagon_2021.csv  fft_rot_kaya_garrido_2024.csv
benchmark/inputs/cmm_rnd/: 1x2_2_bit.csv  1x2_4_bit.csv  1x2_6_bit.csv  1x2_8_bit.csv  1x3_2_bit.csv  1x3_4_bit.csv  1x3_6_bit.csv  1x3_8_bit.csv  1x4_2_bit.csv  1x4_4_bit.csv  1x4_6_bit.csv  1x4_8_bit.csv  1x5_2_bit.csv  1x5_4_bit.csv  1x5_6_bit.csv  1x5_8_bit.csv  1x6_2_bit.csv  1x6_4_bit.csv  1x6_6_bit.csv  1x6_8_bit.csv  1x7_2_bit.csv  1x7_4_bit.csv  1x7_6_bit.csv  1x7_8_bit.csv  1x8_2_bit.csv  1x8_4_bit.csv  1x8_6_bit.csv  1x8_8_bit.csv  1x9_2_bit.csv  1x9_4_bit.csv  1x9_6_bit.csv  1x9_8_bit.csv  2x2_2_bit.csv  2x2_3_bit.csv  2x2_4_bit.csv  2x2_5_bit.csv  2x2_6_bit.csv  2x2_8_bit.csv  2x3_4_bit.csv  2x3_6_bit.csv  (+216 more)
benchmark/inputs/mcm/: mcm.csv  mcm.m
benchmark/inputs/scm/: scm_lagoon_metodi.csv  scm_reduced.csv
benchmark/inputs/sop/: sop_symmetry_8.csv
benchmark/linux-cluster/: cleanup_intermediate.py  dependency_wrapper.py  start_cleanup.sh  start_cmm.sh
benchmark/scripts/: analyze.py  cmm_benchmark.py  complex_mult_benchmark.py  conv_core_benchmark.py  create_vhdl_code.py  fft_benchmark.py  pcmm_benchmark.py  pcomplex_mult_benchmark.py  pconv_core_benchmark.py  pipelining_benchmark.py  rpag_comp_bench.py  sop_benchmark.py  start_benchmark.py  synthesize_vivado.py
benchmark/vhdl/: add_node_v3.vhd
src/: mcm.cpp  mcm.h  mcm_cadical.cpp  mcm_cadical.h  mcm_executable.cpp  mcm_executable.h  mcm_kissat.cpp  mcm_kissat.h  mcm_syrup.cpp  mcm_syrup.h  mcm_z3.cpp  mcm_z3.h  scm.cpp  scm.h  scm_cadical.cpp  scm_cadical.h  scm_syrup.cpp  scm_syrup.h  scm_z3.cpp  scm_z3.h
